[gd_scene load_steps=2 format=3 uid="uid://cgb6tnkkjebc7"]

[ext_resource type="Script" path="res://Scripts/Multiplayer.gd" id="1_q8pj8"]

[node name="Multiplayer" type="Node"]
script = ExtResource("1_q8pj8")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Start" type="Button" parent="UI/VBoxContainer"]
visible = false
layout_mode = 2
text = "Start"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="Host" type="Button" parent="UI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Connect" type="Button" parent="UI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Connect"

[node name="IP" type="LineEdit" parent="UI/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "127.0.0.1"
expand_to_text_length = true

[connection signal="pressed" from="UI/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/HBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/HBoxContainer/Connect" to="." method="_on_connect_pressed"]
